# fizz

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: cargo.yml
backend/: .env  Cargo.toml  Dockerfile  docker-compose.yml  init_db.sql
backend/src/: main.rs  models.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/routes/: auth_user.rs  create_user.rs  login_user.rs  mod.rs  tasks.rs
backend/src/routes/tasks/: add_task.rs  edit_task.rs  get_tasks.rs  mod.rs
backend/src/routes/user/: login_user.rs  mod.rs  register_user.rs
frontend/: .eslintrc.js  package.json
frontend/components/: AddTaskButton.js  Header.js  Layout.js  LoginModal.js  RegisterModal.js  RichTextEditor.js  TaskItem.js  TaskLabel.js  TaskList.js  TaskModal.js  UserPopover.js
frontend/lib/: util.js
frontend/pages/: _app.js  dash.js  index.js
