[package]
name = "fizz"
version = "0.1.0"
authors = ["Adil Mohiuddin <amohi9046@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.1"
dotenv = "0.15.0"
http = "0.2.6"
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = "1.0.136"
sqlx = { version = "0.5.11", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.17.0", features = ["full"] }
tower-http = { version = "0.2.5", features = ["cors"] }
validator = { version = "0.14.0", features = ["derive"] }